Changelog
=========

2.0.0 (Unreleased)
------------------

Upgrade to Plone 4

- Dependency on ``collective.filteredlocking`` [keul]
- Removed XM permissions mapping [keul]

1.0.2 (2012-02-06)
------------------

* fixed ploneboard rolemap permissions [andrea]

1.0.1 (2011-12-19)
------------------

* added employee role to eXtremeManagement: Add Project [andrea]

1.0.0 (xxxx-xx-xx)
------------------

* Initial release