@@ -7,9 +7,15 @@
 
   <five:registerPackage package="." initialize=".initialize" />
 
-  <!-- Include the sub-packages that use their own configure.zcml files. -->
-  
-  <!-- Register the installation GenericSetup extension profile -->
+  <permission
+        id="rer.groupware.security.DelegateLocalManagerRole"
+        title="Sharing page: Delegate LocalManager role"
+        />
+  <permission
+        id="rer.groupware.security.DelegateEditorAdvRole"
+        title="Sharing page: Delegate EditorAdv role"
+        />
+
   <genericsetup:registerProfile
       name="default"
       title="RER Groupware Security"
