@@ -15,7 +15,7 @@ setup(name='rer.groupware.security',
         ],
       keywords='',
       author='RedTurtle Technology',
-      author_email='sviluppoplone@redturtle.net',
+      author_email='sviluppoplone@redturtle.it',
       url='',
       license='GPL',
       packages=find_packages(exclude=['ez_setup']),
@@ -24,10 +24,12 @@ setup(name='rer.groupware.security',
       zip_safe=False,
       install_requires=[
           'setuptools',
-          'rer.localmanager',
-          'rer.editoradv',
+          'collective.autopermission',
           'redturtle.deletepolicy',
           'collective.filteredlocking',
+          #'Plone.Popoll',
+          #'Products.Ploneboard',
+          #'collective.portletpage',
       ],
       entry_points="""
       # -*- Entry points: -*-
