@@ -8,6 +8,7 @@ Upgrade to Plone 4
 
 - Dependency on ``collective.filteredlocking`` [keul]
 - Removed XM permissions mapping [keul]
+- Merged with rer.editoradv and rer.localmanager [keul]
 
 1.0.2 (2012-02-06)
 ------------------
